--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.0.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "esprima": "^4.0.1",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
