--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
     "@types/dompurify": "^3.0.2"
   }
 }
